--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   </style>
 </head>
 <body>
+  <img class="box-image" src="images/illustration-box-desktop.svg">
   <div class="faq-container">
     <div class="img-container">
       <img class="woman-mobile-img" src="images/illustration-woman-online-mobile.svg">
-      <img src="images/bg-pattern-mobile.svg">
+      <img class="pattern-bg-mobile-img" src="images/bg-pattern-mobile.svg">
     </div>
-    <div class="faq-contents">
-      
-      <h1>FAQ</h1>
 
+    <div class="faq-contents">
+      <h1>FAQ</h1>
       <details>
         <summary>How many team members can I invite?</summary>
           <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
